# speech-anomaly

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
configs/: batch_runner.yaml  feature_extractor.yaml  preprocessor.yaml  runner.yaml
configs/data/: all.yaml  ravdess.yaml  savee.yaml
configs/experiment/: anomaly.yaml
configs/features/: acoustic.yaml  all.yaml  prosodic.yaml  top20.yaml  voice_quality.yaml
configs/logging/: default.yaml
configs/model/: elliptic_envelope.yaml  isolation_forest.yaml  local_outlier_factor.yaml  logistic_regression.yaml  one_class_svm.yaml  random_forest.yaml  xgb_classifier.yaml
configs/report/: basic.yaml  full.yaml
results/: batch_results.tsv  batch_results_top20.tsv  batch_results_wo_top20.tsv
scripts/: label.py  meta_analysis.py  ravdess_vs_savee_barcharts.py  stats_heatmaps.py
src/: batch_runner.py  extract_features.py  preprocess.py  run_experiment.py
src/batch/: __init__.py  grid.py
src/core/: __init__.py  cli_overrides.py  runner.py
src/data/: __init__.py  dataset.py  filename_parsers.py  loader.py  preprocessor.py
src/evaluation/: feature_importance.py  metrics.py  reports.py
src/experiments/: anomaly_detection.py  base.py
src/features/: __init__.py  factory.py  feature_extractor.py
src/models/: factory.py  registry.py
tests/: test_actor_zscore.py  test_anomaly_pipeline_guards.py  test_cli_overrides.py  test_data_debug_report.py  test_data_filter.py  test_index_artifact_columns.py  test_real_data_report_reproducibility.py  test_report_reproducibility.py  test_top_features_report.py
(+8 files in other folders)
